hphp/hack/test/typecheck/string_no_members.php
<?hh

function f() : void {
  string::class;
  string::T;
  string::m();
}
